<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#272525"
    tools:context=".UploadActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>


    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/button_chooseImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        android:onClick="ChooseImage"/>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/dropdown_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:hint="@string/category"
        app:startIconDrawable="@drawable/ic_baseline_category_24"
        >

        <AutoCompleteTextView
            android:id="@+id/dropdown_menu_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/upload" />

        <Button
            android:id="@+id/button_showImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_images" />
    </LinearLayout>
</LinearLayout>