<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#231f20"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PhotographyActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="110dp"
            android:layout_height="190dp"
            android:layout_margin="5dp"
            android:background="#231f20"
            app:cardElevation="0dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/cardview_dark_background"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/button_portrait"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/ic_i"
                android:onClick="portraitClick"
                android:scaleType="centerCrop"
                android:text="@string/button_portrait" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:text="Portrait Photography"
                android:gravity="center_horizontal"
                android:textColor="#F5F5F5"
                android:textSize="10sp" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="110dp"
            android:layout_height="190dp"
            android:layout_margin="5dp"
            android:background="#231f20"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/cardview_dark_background"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/button_landscape"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/ic_g"
                android:onClick="landscapeClick"
                android:scaleType="centerCrop"
                android:text="@string/button_landscape" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:text="Landscape Photography"
                android:gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:textSize="10sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="110dp"
            android:layout_height="190dp"
            android:layout_margin="5dp"
            android:background="#231f20"
            android:clickable="true"
            app:cardElevation="0dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/cardview_dark_background"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/button_night"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/ic_night"
                android:onClick="nightClick"
                android:scaleType="centerCrop"
                android:text="@string/button_night" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:text="Night Photography"
                android:gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:textSize="10sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView6"
            android:layout_width="110dp"
            android:layout_height="190dp"
            android:layout_margin="5dp"
            android:background="#231f20"
            android:clickable="true"
            app:cardElevation="0dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/cardview_dark_background"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/button_wildLife"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/wildlife"
                android:onClick="wildLifeClick"
                android:scaleType="centerCrop"
                android:text="Wildlife Photography" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:text="Wildlife Photography"
                android:gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:textSize="10sp" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="110dp"
            android:layout_height="190dp"
            android:layout_margin="5dp"
            android:background="#231f20"
            android:clickable="true"
            app:cardElevation="0dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/cardview_dark_background"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/button_sunset"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/ic_sunset"
                android:onClick="sunsetClick"
                android:scaleType="centerCrop"
                android:text="@string/button_sunset" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:text="Sunset Photography"
                android:gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:textSize="10sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="110dp"
            android:layout_height="190dp"
            android:layout_margin="5dp"
            android:background="#231f20"
            android:clickable="true"
            app:cardElevation="0dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/cardview_dark_background"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/button_street"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/ic_street"
                android:onClick="streetClick"
                android:scaleType="centerCrop"
                android:text="@string/button_street" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:text="Street Photography"
                android:gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:textSize="10sp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>